[package]
name = "sniperbot"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP client for API calls
reqwest = { version = "0.11", features = ["json"] }
# Async runtime
tokio = { version = "1.0", features = ["full"] }
# JSON parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Error handling
anyhow = "1.0"
thiserror = "1.0"
# Logging
log = "0.4"
env_logger = "0.10"
# Configuration
config = "0.13"
# Database (SQLite for storing data)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
# Telegram bot - FIXED: Added command macros feature
teloxide = { version = "0.12", features = ["macros", "ctrlc_handler"] }
# Time handling
chrono = { version = "0.4", features = ["serde"] }
# Big numbers for crypto calculations
rust_decimal = { version = "1.0", features = ["serde"] }
# WebSocket for real-time data
tokio-tungstenite = "0.20"
# Rate limiting
governor = "0.6"
# Base64 encoding
base64 = "0.21"
# Add dptree for teloxide dependencies
dptree = "0.3"
dotenv = "0.15.0"
